Fixes buggy handling of slide visibility

--- a/demo/style.css
+++ b/demo/style.css
@@ -69,11 +69,11 @@ section.bespoke-slide {
 }
 
 .bespoke-inactive {
-  opacity: 0;
+  visibility: hidden;
 }
 
 .bespoke-active {
-  opacity: 1;
+  visibility: visible;
 }
 
 .slide-1 { background: #0ac2d2; }
@@ -82,3 +82,8 @@ section.bespoke-slide {
 .slide-4 { background: #fdc162; }
 .slide-5 { background: #fd6a62; }
 .slide-6 { background: #f68dbb; }
+
+.fx-transitioning-in,
+.fx-transitioning-out {
+  visibility: visible;
+}
